--- a/app/assets/stylesheets/_trails.scss
+++ b/app/assets/stylesheets/_trails.scss
@@ -255,6 +255,7 @@ $not-started-dot-color: #D8D8D8;
 
     header {
       float: left;
+      margin-bottom: 0;
       margin-right: 4em;
       width: 50%;
     }
